# d20lenny

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/actions/setup/: action.yml
.github/workflows/: lint.yml  pytest.yml
d20/: __init__.py  __main__.py  common.py  context.py  dice.py  diceast.py  enums.py  errors.py  expression.py  grammar.lark  rand.py  stringifiers.py  utils.py
d20/roll/: __init__.py  expression.py  stringifier.py
docs/: api.rst  ast.rst  expression.rst
tests/: conftest.py  custom_strategies.py  test_arguments.py  test_context.py  test_dice.py  test_hypothesis.py  test_util.py  test_utils.py
typings/d20/: __init__.pyi  diceast.pyi  enums.pyi  errors.pyi  rand.pyi  utils.pyi
typings/d20/roll/: __init__.pyi  expression.pyi  stringifier.pyi
