[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["d20", "typings/**/*.pyi"]

[project]
name = "d20"
version = "1.1.3"
authors = [
    { name = "Andrew Zhu", email = "andrew@zhu.codes" },
    { name = "Pim Pieters", email = "pim@pieters.tv" },
]
description = "A formal grammar-based dice parser and roller for D&D and other dice systems."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = [
    "cachetools>=3.1.0,<6.0.0",
    "lark>=0.9.0,<2.0.0",
    "numpy==2.4.4",
]

[project.urls]
"Homepage" = "https://github.com/pipieter/d20lenny"
"Bug Tracker" = "https://github.com/pipieter/d20lenny/issues"

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
known_first_party = ["d20"]
# I am bound by pycharm's import autosorting rules
no_lines_before = "LOCALFOLDER"
reverse_relative = true
combine_as_imports = true

[tool.pyright]
include = ["d20", "tests"]
exclude = ["**/__pycache__", "./testparser.py", "./tests/custom_strategies.py"]
typeCheckingMode = "strict"
